--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -980,26 +980,26 @@ body {
   padding: 15px 0;
   color: #ffffff;
 }
-.cid-qZYyd9gbDX {
+.cid-qZYBPB5Hpn {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-qZYyd9gbDX .mbr-slider .carousel-control {
+.cid-qZYBPB5Hpn .mbr-slider .carousel-control {
   background: #1b1b1b;
 }
-.cid-qZYyd9gbDX .mbr-slider .carousel-control-prev {
+.cid-qZYBPB5Hpn .mbr-slider .carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-qZYyd9gbDX .mbr-slider .carousel-control-next {
+.cid-qZYBPB5Hpn .mbr-slider .carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-qZYyd9gbDX .mbr-slider .modal-body .close {
+.cid-qZYBPB5Hpn .mbr-slider .modal-body .close {
   background: #1b1b1b;
 }
-.cid-qZYyd9gbDX .mbr-gallery-item > div::before {
+.cid-qZYBPB5Hpn .mbr-gallery-item > div::before {
   content: '';
   position: absolute;
   left: 0;
@@ -1011,24 +1011,24 @@ body {
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
 }
-.cid-qZYyd9gbDX .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+.cid-qZYBPB5Hpn .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
 }
-.cid-qZYyd9gbDX .mbr-gallery-item > div:hover:before {
+.cid-qZYBPB5Hpn .mbr-gallery-item > div:hover:before {
   opacity: 0.6 !important;
 }
-.cid-qZYyd9gbDX .mbr-gallery-item > div:hover .icon-focus {
+.cid-qZYBPB5Hpn .mbr-gallery-item > div:hover .icon-focus {
   top: calc(50% - 24px);
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter-all > a {
+.cid-qZYBPB5Hpn .mbr-gallery-filter-all > a {
   padding: 30px;
   color: #444444 !important;
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter {
+.cid-qZYBPB5Hpn .mbr-gallery-filter {
   padding-top: 0;
   padding-bottom: 2rem;
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter .btn {
+.cid-qZYBPB5Hpn .mbr-gallery-filter .btn {
   text-transform: uppercase;
   color: #444444 !important;
   font-weight: 400;
@@ -1037,21 +1037,21 @@ body {
   border: none;
   padding: 12px 15px 12px 15px;
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter .btn:hover {
+.cid-qZYBPB5Hpn .mbr-gallery-filter .btn:hover {
   background: transparent;
   color: #ffbc00 !important;
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter ul {
+.cid-qZYBPB5Hpn .mbr-gallery-filter ul {
   display: block;
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter ul li {
+.cid-qZYBPB5Hpn .mbr-gallery-filter ul li {
   position: relative;
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter li.active .btn {
+.cid-qZYBPB5Hpn .mbr-gallery-filter li.active .btn {
   color: #ffbc00 !important;
   background: transparent;
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter li::after {
+.cid-qZYBPB5Hpn .mbr-gallery-filter li::after {
   bottom: 0.5rem;
   content: "";
   height: 4px;
@@ -1062,12 +1062,12 @@ body {
   transition: all 0.3s ease-in-out;
   background: #ffbc00 !important;
 }
-.cid-qZYyd9gbDX .mbr-gallery-filter li.active::after,
-.cid-qZYyd9gbDX .mbr-gallery-filter li:hover::after {
+.cid-qZYBPB5Hpn .mbr-gallery-filter li.active::after,
+.cid-qZYBPB5Hpn .mbr-gallery-filter li:hover::after {
   transform: translateX(-50%) scale(1);
   background: #ffbc00 !important;
 }
-.cid-qZYyd9gbDX .mbr-gallery-title {
+.cid-qZYBPB5Hpn .mbr-gallery-title {
   position: absolute;
   display: block;
   width: 100%;
@@ -1076,7 +1076,7 @@ body {
   color: #fff;
   z-index: 2;
 }
-.cid-qZYyd9gbDX .mbr-gallery-title:before {
+.cid-qZYBPB5Hpn .mbr-gallery-title:before {
   content: " ";
   width: 100%;
   height: 100%;
@@ -1089,10 +1089,10 @@ body {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
-.cid-qZYyd9gbDX .icon-focus:before {
+.cid-qZYBPB5Hpn .icon-focus:before {
   content: '\e95e';
 }
-.cid-qZYyd9gbDX .icon-focus {
+.cid-qZYBPB5Hpn .icon-focus {
   transition: all .3s;
   font-size: 2rem !important;
   top: 50%;
@@ -1103,14 +1103,14 @@ body {
   color: #444444 !important;
   background-color: #ffffff;
 }
-.cid-qZYyd9gbDX .mbr-section-title {
+.cid-qZYBPB5Hpn .mbr-section-title {
   margin: 0;
 }
-.cid-qZYyd9gbDX .underline {
+.cid-qZYBPB5Hpn .underline {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
 }
-.cid-qZYyd9gbDX .underline .line {
+.cid-qZYBPB5Hpn .underline .line {
   width: 3rem;
   height: 2px;
   background: #444444;
